fix appearance of login/signup buttons on iOS close #48

--- a/sites/all/themes/heybabies/sass/_forms.scss
+++ b/sites/all/themes/heybabies/sass/_forms.scss
@@ -50,6 +50,7 @@
     text-align: center;
     background: $seafoam;
     border-radius: 4px;
+    appearance: none;
     -webkit-apperance: none;
     text-decoration: none;
     cursor: pointer;
